--- a/secp_js/package.json
+++ b/secp_js/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "dependencies": {
-      "secp256k1": "3.0.1",
-      "ethereumjs-util": "6.2.0"
+    "ethereumjs-util": "6.2.0",
+    "mocha": "^6.2.2",
+    "secp256k1": "3.0.1"
   },
   "author": "",
   "license": "ISC"
